ModalConfirm checkbox and text overflow fix (#1026)
* fix ModalConfirm checkbox and text overflow

* lint

--- a/src/views/modals/ModalConfirm/ModalConfirm.less
+++ b/src/views/modals/ModalConfirm/ModalConfirm.less
@@ -4,6 +4,10 @@
 .modal-confirm {
     /deep/.ivu-modal {
         width: 7rem !important;
+        overflow-wrap: break-word;
+        word-wrap: break-word;
+        word-break: break-word;
+        hyphens: auto;
     }
 
     /deep/.footer {
